force-app/main/default/objects/ServiceOps_Setting__mdt/ServiceOps_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Global settings for ServiceOps Pulse.</description>
    <label>ServiceOps Setting</label>
    <pluralLabel>ServiceOps Settings</pluralLabel>
</CustomObject>