force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Agent_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Domain__c</fullName>
    <description>The domain used by internal agents (e.g. company.com). Used to distinguish agent vs customer emails.</description>
    <label>Agent Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>