force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Closed_Status_Values__c.field-meta.xml
<CustomField>
    <fullName>Closed_Status_Values__c</fullName>
    <description>Comma-separated values for Case statuses that should be considered closed/resolved.</description>
    <label>Closed Status Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>