force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Default_Business_Hours_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Business_Hours_Id__c</fullName>
    <description>The ID of the default Business Hours to use for calculations.</description>
    <label>Default Business Hours Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>