force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Enable_Entitlement_Risk__c.field-meta.xml
<CustomField>
    <fullName>Enable_Entitlement_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, SLAPulse will flag cases missing entitlements as risks.</description>
    <label>Enable Entitlement Risk</label>
    <type>Checkbox</type>
</CustomField>