force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Near_Breach_Threshold_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Near_Breach_Threshold_Minutes__c</fullName>
    <label>Near Breach Threshold Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>