force-app/main/default/objects/ServiceOps_Setting__mdt/fields/No_Touch_Threshold_Hours__c.field-meta.xml
<CustomField>
    <fullName>No_Touch_Threshold_Hours__c</fullName>
    <label>No Touch Threshold Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>