force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Queue_Aging_Threshold_Hours__c.field-meta.xml
<CustomField>
    <fullName>Queue_Aging_Threshold_Hours__c</fullName>
    <label>Queue Aging Threshold Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>