force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Reply_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Reply_SLA_Hours__c</fullName>
    <label>Reply SLA Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>