force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Reply_Time_Calculation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Reply_Time_Calculation_Mode__c</fullName>
    <description>Mode for calculating reply time (e.g. Calendar, BusinessHours).</description>
    <label>Reply Time Calculation Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>