force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Scan_Frequency_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Scan_Frequency_Minutes__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Scan Frequency (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>