force-app/main/default/objects/ServiceOps_Setting__mdt/fields/Scan_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Scan_Window_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days to look back for recently modified open cases during the batch scan. Prevents hitting governor limits in large orgs.</description>
    <label>Scan Window (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>